# SQLite-Test

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  sqLite_test.db  sql_make.txt
include/: Database.h
resources/: sql_make copy.txt  sql_make.txt
src/: Database.cpp
test/: CMakeLists.txt  Database_test.cpp
